# posix-sha256-fifo-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Architecture.md
include/: errExit.h  request_response.h
src/: client.c  errExit.c  request_response.c  server.c
